test(back): test of service and controllers